# Incident-Management-System

./: README.md  docker-compose.yml  package-lock.json
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routers/: health.py  incidents.py  seed.py  signals.py
backend/app/core/: config.py  container.py  db.py  mongo.py  redis.py  time.py
backend/app/domain/: enums.py  exceptions.py  models.py  states.py  strategies.py
backend/app/repositories/: __init__.py  interfaces.py  mongo.py  postgres.py  redis.py
backend/app/schemas/: health.py  incident.py  seed.py  signal.py
backend/app/services/: alert_service.py  incident_service.py  seeder_service.py  signal_service.py  workflow_service.py
backend/app/workers/: metrics.py  stream_worker.py
backend/scripts/: README.md  generate_signals.py  sample_signals_backpressure_test.json  sample_signals_cascade_failure.json  sample_signals_mcp_failure.json  sample_signals_rdbms_outage.json  simulate_rdbms_outage.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo
frontend/src/: App.tsx  styles.css
frontend/src/components/: IncidentTable.tsx  RcaForm.tsx  SeedPanel.tsx  SignalList.tsx  StateControls.tsx
frontend/src/hooks/: useIncidentDetail.ts  useIncidents.ts
frontend/src/pages/: DashboardPage.tsx  IncidentDetailPage.tsx
frontend/src/services/: api.ts
