[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ims-backend"
version = "0.1.0"
description = "Production-grade Incident Management System backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "redis>=5.0.7",
    "asyncpg>=0.29.0",
    "motor>=3.5.1",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
packages = ["app"]
